# mlquiades

./: README.md  pyproject.toml
.github/workflows/: hello.yml  run_tests.yml
output/: data_split.csv  report.html  report.md  report_both.md  report_gex.html  report_isoforms.html  report_isoforms.md
output/all_tissues/: data_split.csv  evaluation.csv  report.html  report.md
output/cdk4_6_cancer_both/: evaluation_df.csv  evaluation_df_acc.csv  evaluation_df_rocauc.csv
output/cdk4_6_cancer_gex/: evaluation_df.csv  evaluation_df_acc.csv  evaluation_df_rocauc.csv
output/cdk4_6_cancer_isoforms/: evaluation_df.csv  evaluation_df_acc.csv  evaluation_df_rocauc.csv
output/cdk4_6_genes_both/: evaluation_df.csv  evaluation_df_acc.csv  evaluation_df_rocauc.csv
output/cdk4_6_genes_gex/: evaluation_df.csv  evaluation_df_acc.csv  evaluation_df_rocauc.csv
output/cdk4_6_genes_isoforms/: evaluation_df.csv  evaluation_df_acc.csv  evaluation_df_rocauc.csv
output/pearson_both/: evaluation_df.csv  evaluation_df_acc.csv  evaluation_df_rocauc.csv
output/pearson_gex/: evaluation_df.csv  evaluation_df_acc.csv  evaluation_df_rocauc.csv
output/pearson_isoforms/: evaluation_df.csv  (+2 more)
output_dir/: report.html  report.md
outputs/: report_both.html  report_gex.md
sample_data/: cdk4_6_genes.txt  orchid.txt  palbociclib_new.csv  tpm_palb_rib_short.csv
test/: test_cdk46cancer.py  test_cdk46genes.py  test_pearson.py  test_readin.py  test_split.py  test_splitscale.py
test_manual/: batch_testing_all.sh  error.err  output_test.py  slurm-4804420.out  testing_manual.sh
(+38 files in other folders)
