[project]
name = "mlquiades"
version = "0.1.0"
description = "mlquiades builds and evaluates 6 binary classification machine learning models that predict cancer cell line sensitivity to the CDK4 drug Palbociclib."
readme = "README.md"
requires-python = ">=3.9.4"
dependencies = [
    "imblearn>=0.0",
    "keras>=3.10.0",
    "keras-tuner>=1.4.7",
    "markdown>=3.8.2",
    "matplotlib>=3.9.4",
    "numpy==1.26.4",
    "pandas>=2.3.1",
    "pyranges>=0.1.4",
    "pytest>=8.4.1",
    "scikit-learn==1.5.2",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "sh>=2.2.2",
    "tensorflow>=2.18.1",
    "torch==2.0.1",
]
